Add validator for attributes